--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "es6",
+      "scripthost"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,6 +20,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "sourceMap": true,
     "jsx": "react-jsx"
   },
   "include": [
