--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "xeni-react22",
   "version": "0.1.0",
   "private": true,
+  "description": "ReactAppFirst",
+  "projectURL": "https://react-first.xeniaweb.ch/",
+  "author": "XeniaWeb",
+  "authorsURL": "https://xeniaweb.ch",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
